--- a/config/config.properties
+++ b/config/config.properties
@@ -5,45 +5,45 @@
 #x.runAmmount	| Determines the amount of times this x.runTest will repeat
 
 account.username = CastleLearningOnline
-account.password = CastleLearningOnline
-provider = workshop
+account.password = 836774581965d73924995cb4c02e9
+provider = localhost
 
 lea.getRefs=true
 lea.refAmount=20
 lea.runTest=true
 lea.runAmount=1
 
-school.getRefs=false
+school.getRefs=true
 school.refAmount=20
-school.runTest=false
+school.runTest=true
 school.runAmount=1
 
-calendar.getRefs=false
+calendar.getRefs=true
 calendar.refAmount=20
 calendar.runTest=false
 calendar.runAmount=1
 
-course.getRefs=false
+course.getRefs=true
 course.refAmount=20
 course.runTest=false
 course.runAmount=1
 
-roster.getRefs=false
+roster.getRefs=true
 roster.refAmount=20
 roster.runTest=false
 roster.runAmount=1
 
-staff.getRefs=false
+staff.getRefs=true
 staff.refAmount=20
 staff.runTest=false
 staff.runAmount=1
 
-student.getRefs=false
+student.getRefs=true
 student.refAmount=20
 student.runTest=false
 student.runAmount=1
 
-contact.getRefs=false
+contact.getRefs=true
 contact.refAmount=20
 contact.runTest=false
 contact.runAmount=1
