--- a/.classpath
+++ b/.classpath
@@ -9,9 +9,10 @@
 	<classpathentry kind="lib" path="lib/jackson-annotations-2.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.5.4.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.5.4.jar"/>
-	<classpathentry kind="lib" path="lib/RicOneApi-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/spring-beans-4.1.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-core-4.1.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-web-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/riconeapi-1.2.1-RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/java-jwt-2.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
