--- a/config/config.properties
+++ b/config/config.properties
@@ -9,41 +9,41 @@ account.password = 836774581965d73924995cb4c02e9
 provider = localhost
 
 lea.getRefs=true
-lea.refAmount=20
+lea.refAmount=5
 lea.runTest=true
 lea.runAmount=1
 
 school.getRefs=true
-school.refAmount=20
+school.refAmount=5
 school.runTest=true
 school.runAmount=1
 
 calendar.getRefs=true
-calendar.refAmount=20
-calendar.runTest=false
+calendar.refAmount=5
+calendar.runTest=true
 calendar.runAmount=1
 
 course.getRefs=true
-course.refAmount=20
-course.runTest=false
+course.refAmount=5
+course.runTest=true
 course.runAmount=1
 
 roster.getRefs=true
-roster.refAmount=20
-roster.runTest=false
+roster.refAmount=5
+roster.runTest=true
 roster.runAmount=1
 
 staff.getRefs=true
-staff.refAmount=20
-staff.runTest=false
+staff.refAmount=5
+staff.runTest=true
 staff.runAmount=1
 
 student.getRefs=true
-student.refAmount=20
-student.runTest=false
+student.refAmount=5
+student.runTest=true
 student.runAmount=1
 
 contact.getRefs=true
-contact.refAmount=20
-contact.runTest=false
+contact.refAmount=5
+contact.runTest=true
 contact.runAmount=1
