--- a/test/t6/config/config.properties
+++ b/test/t6/config/config.properties
@@ -1,12 +1,12 @@
 #x is equal to one of these: [lea, school, calendar, course, roster, staff, student, contact]
-#x.getRefs		| Determines if you want to initially retrieve refIds for 'x' that will be used in the different run tests
+#x.getRefs	| Determines if you want to initially retrieve refIds for 'x' that will be used in the different run tests
 #x.refAmount	| Determines the max amount of refIds x.getRefs will return
-#x.runTest		| Determines if the test for 'x' will run. Each test contains multiple service paths related to 'x'
+#x.runTest	| Determines if the test for 'x' will run. Each test contains multiple service paths related to 'x'
 #x.runAmmount	| Determines the amount of times this x.runTest will repeat
 
-account.username = SuccessMaker
-account.password = SuccessMaker
-provider = workshop
+account.username = 
+account.password = 
+provider = 
 
 lea.getRefs=true
 lea.refAmount=20
